--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -17,26 +17,18 @@
         </button>
         <mat-menu #notificationsMenu="matMenu" yPosition="below">
             <div class="padded notifications">
-                <table class="mat-table" *ngIf="notifications && notifications.length>0"
-                    class="center-horizontal center-vertical">
-                    <thead>
-                        <tr>
-                            <th class="mat-header-cell">Sender</th>
-                            <th class="mat-header-cell">message</th>
-                            <th class="mat-header-cell">Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let notification of notifications" [ngClass]="{ 'unread': notification.unread }"
-                            (click)="openNotification(notification)">
-                            <td class="mat-cell">{{notification.sender}}</td>
-                            <td class="mat-cell">{{notification.message}}</td>
-                            <td class="mat-cell">{{notification.date.toLocaleString()}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <span *ngIf="!notifications || notifications.length==0"
-                    class="marged padded center-horizontal center-vertical">No Notifications</span>
+                <div class="notification" *ngFor="let notification of notifications" [ngClass]="{ 'unread': notification.unread }" (click)="openNotification(notification)">
+                    <div>
+                        <span><b>{{notification.sender}}</b>: </span>
+                        <span>
+                        {{notification.message}}
+                    </span>
+                    </div>
+                    <div>
+                        <span class="date">{{notification.date.toLocaleString()}}</span>
+                    </div>
+                </div>
+                <span *ngIf="!notifications || notifications.length==0" class="marged padded center-horizontal center-vertical">No Notifications</span>
             </div>
         </mat-menu>
         <button *ngIf="!isLogged && !isMobile" mat-button routerLink="/auth/login" routerOutlet="content">
@@ -48,8 +40,7 @@
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isMobile ? 60 : 0">
-        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'"
-            [fixedInViewport]="true" fixedTopGap="56">
+        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
                 <a mat-list-item *ngIf="isLogged" routerLink="./home">Home</a>
                 <a mat-list-item *ngIf="isLogged && isAdmin" routerLink="./admin">Admin</a>
