--- a/Project/Client/src/app/components/parent/reserved-races/reserved-races.html
+++ b/Project/Client/src/app/components/parent/reserved-races/reserved-races.html
@@ -67,7 +67,7 @@
                             {{childRace.race.direction}}
                         </td>
                         <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted">
-                            {{childRace.race.date.toDateString()}}
+                            {{getTimeString(childRace.race.date)}}
                         </td>
                         <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted">
                             {{childRace.race.raceState}}
