--- a/Project/Client/src/app/components/admin/companion-requests/companion-requests.component.html
+++ b/Project/Client/src/app/components/admin/companion-requests/companion-requests.component.html
@@ -8,9 +8,12 @@
 
         <div style="border: 1px solid rgba(0, 0, 0, .12); border-radius: 4px; overflow: hidden;">
             <nav mat-tab-nav-bar [backgroundColor]="background">
-                <a mat-tab-link (click)="switchToTab(RequestsTab.PENDING)" [active]="activeTab === RequestsTab.PENDING || false">Pending</a>
-                <a mat-tab-link (click)="switchToTab(RequestsTab.ACCEPTED)" [active]="activeTab === RequestsTab.ACCEPTED || false">Accepted</a>
-                <a mat-tab-link (click)="switchToTab(RequestsTab.CONFIRMED)" [active]="activeTab === RequestsTab.CONFIRMED || false">Confirmed</a>
+                <a mat-tab-link (click)="switchToTab(RequestsTab.PENDING)"
+                    [active]="activeTab === RequestsTab.PENDING || false">Pending</a>
+                <a mat-tab-link (click)="switchToTab(RequestsTab.ACCEPTED)"
+                    [active]="activeTab === RequestsTab.ACCEPTED || false">Accepted</a>
+                <a mat-tab-link (click)="switchToTab(RequestsTab.CONFIRMED)"
+                    [active]="activeTab === RequestsTab.CONFIRMED || false">Confirmed</a>
             </nav>
 
             <div class="marged overflow-auto">
@@ -23,9 +26,12 @@
                             <th class="mat-header-cell">Date</th>
                             <th class="mat-header-cell">Initial Stop</th>
                             <th class="mat-header-cell">Final Stop</th>
-                            <th *ngIf="activeTab === RequestsTab.PENDING" class="mat-header-cell mat-cell-button">Accept</th>
-                            <th *ngIf="activeTab === RequestsTab.PENDING" class="mat-header-cell mat-cell-button">Reject</th>
-                            <th *ngIf="activeTab === RequestsTab.ACCEPTED" class="mat-header-cell mat-cell-button">Un-Accept</th>
+                            <th *ngIf="activeTab === RequestsTab.PENDING" class="mat-header-cell mat-cell-button">Accept
+                            </th>
+                            <th *ngIf="activeTab === RequestsTab.PENDING" class="mat-header-cell mat-cell-button">Reject
+                            </th>
+                            <th *ngIf="activeTab === RequestsTab.ACCEPTED" class="mat-header-cell mat-cell-button">
+                                Un-Accept</th>
                         </tr>
                     </thead>
 
@@ -38,7 +44,7 @@
                             <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted"> {{request.direction}}
                             </td>
                             <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted">
-                                {{request.date | date}}
+                                {{getTimeString(request.date)}}
                             </td>
                             <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted">
                                 {{request.initialStop.name}}
@@ -46,18 +52,19 @@
                             <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted">
                                 {{request.finalStop.name}} </td>
                             <td *ngIf="activeTab === RequestsTab.PENDING" class="mat-cell mat-cell-button">
-                                <button mat-icon-button class="green" (click)="$event.stopPropagation();acceptRequest(request)">
+                                <button mat-icon-button class="green"
+                                    (click)="$event.stopPropagation();acceptRequest(request)">
                                     <mat-icon>check</mat-icon>
                                 </button>
                             </td>
                             <td *ngIf="activeTab === RequestsTab.PENDING" class="mat-cell mat-cell-button">
                                 <button mat-icon-button (click)="$event.stopPropagation();rejectRequest(request)">
-                                        <mat-icon class="red">clear</mat-icon>
+                                    <mat-icon class="red">clear</mat-icon>
                                 </button>
                             </td>
                             <td *ngIf="activeTab === RequestsTab.ACCEPTED" class="mat-cell mat-cell-button">
                                 <button mat-icon-button (click)="$event.stopPropagation();unAcceptRequest(request)">
-                                        <mat-icon class="red">clear</mat-icon>
+                                    <mat-icon class="red">clear</mat-icon>
                                 </button>
                             </td>
                         </tr>
