--- a/Project/Client/src/app/components/parent/reserve-child/reserve-child-dialog/reserve-child.dialog.html
+++ b/Project/Client/src/app/components/parent/reserve-child/reserve-child-dialog/reserve-child.dialog.html
@@ -23,7 +23,8 @@
                             {{race?.race?.direction}}
                         </td>
                         <td class="mat-cell cdk-column-Mail mat-column-Mail ng-star-inserted">
-                            {{race?.race?.date?.toLocaleDateString()}}, {{race?.race?.date?.toLocaleTimeString()}}
+                            {{race?.race?.date?.toLocaleDateString()}},
+                            {{race?.race?.date?.toLocaleTimeString([],{ hour: '2-digit', minute: '2-digit' })}}
                         </td>
                         <td class="center-horizontal center-vertical squeeze">
                             <mat-checkbox [checked]="race.checked"
