--- a/Project/Client/src/app/components/home/parent/view-race/view-race.dialog.css
+++ b/Project/Client/src/app/components/home/parent/view-race/view-race.dialog.css
@@ -152,10 +152,10 @@ td span {
     text-align: center;
 }
 
-.covered::after {
+.reached::after {
     background-color: greenyellow !important;
 }
 
-.uncovered::after {
-    background-color: red !important;
+.unreached::after {
+    background-color: gray !important;
 }
