--- a/Project/Client/src/app/components/app/app.component.css
+++ b/Project/Client/src/app/components/app/app.component.css
@@ -143,7 +143,7 @@ h1.app-name {
 }
 
 .unread {
-    background-color: rgb(233, 233, 233);
+    /* background-color: rgb(233, 233, 233); */
 }
 
 .notification.unread::before {
