--- a/Project/Client/src/app/components/home/companion/today-races/today-races.component.html
+++ b/Project/Client/src/app/components/home/companion/today-races/today-races.component.html
@@ -1,6 +1,6 @@
 <div class="padded-content">
     <mat-card class="scroll">
-        <p>Today Races</p>
+        <p>Today Companion Races</p>
         <div class="spinner-container" *ngIf="loading">
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
