--- a/Project/Client/src/app/components/home/parent/today-races/today-parent-races.component.html
+++ b/Project/Client/src/app/components/home/parent/today-races/today-parent-races.component.html
@@ -1,6 +1,6 @@
 <div class="padded-content">
     <mat-card class="scroll">
-        <p>Today Races</p>
+        <p>Today Parent Races</p>
         <div class="spinner-container" *ngIf="loading">
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
@@ -22,6 +22,10 @@
                 <ng-container matColumnDef="direction">
                     <th mat-header-cell *matHeaderCellDef>Direction</th>
                     <td mat-cell *matCellDef="let race">{{race.direction}}</td>
+                </ng-container>
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef>Date</th>
+                    <td mat-cell *matCellDef="let race">{{getTimeString(element.date)}}</td>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
