--- a/Project/Client/src/app/components/app/app.component.css
+++ b/Project/Client/src/app/components/app/app.component.css
@@ -169,6 +169,11 @@ h1.app-name {
     margin-left: 14px;
     border-radius: 4px;
     font-size: 12px;
+    margin-bottom: 8px;
+}
+
+.notification:last-child {
+    margin-bottom: 0px;
 }
 
 .notification .date {
