--- a/Project/Client/src/app/components/home/parent/today-races/today-parent-races.component.html
+++ b/Project/Client/src/app/components/home/parent/today-races/today-parent-races.component.html
@@ -5,8 +5,7 @@
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
         <div class="marged overflow-auto">
-            <mat-table class="fit-content center-horizontal" [dataSource]="dataSource"
-                *ngIf="!loading && !dataSource?.isEmpty()">
+            <mat-table class="fit-content center-horizontal" [dataSource]="dataSource" *ngIf="!loading && !dataSource?.isEmpty()">
                 <ng-container matColumnDef="children">
                     <th mat-header-cell *matHeaderCellDef>Children</th>
                     <td mat-cell *matCellDef="let race">
@@ -25,7 +24,7 @@
                 </ng-container>
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef>Date</th>
-                    <td mat-cell *matCellDef="let race">{{getTimeString(element.date)}}</td>
+                    <td mat-cell *matCellDef="let race">{{getTimeString(race.date)}}</td>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
