--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,6 +1,6 @@
 <h3 class="centered-text">ADMINISTRATION SECTION</h3>
 <div>
-    <div class="components-grid border">
+    <div class="components-grid">
         <app-register class="components-grid-cell"></app-register>
         <app-users-management class="components-grid-cell"></app-users-management>
         <app-lines-management class="components-grid-cell"></app-lines-management>
