--- a/Project/Client/src/app/components/home/companion/today-races/today-races.component.html
+++ b/Project/Client/src/app/components/home/companion/today-races/today-races.component.html
@@ -5,8 +5,7 @@
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
         <div class="marged overflow-auto">
-            <mat-table class="fit-content center-horizontal" [dataSource]="dataSource"
-                *ngIf="!loading && !dataSource?.isEmpty()">
+            <mat-table class="fit-content center-horizontal" [dataSource]="dataSource" *ngIf="!loading && !dataSource?.isEmpty()">
                 <ng-container matColumnDef="lineName">
                     <th mat-header-cell *matHeaderCellDef>Line</th>
                     <td mat-cell *matCellDef="let race">{{race.line.name}}</td>
@@ -17,13 +16,13 @@
                 </ng-container>
                 <ng-container matColumnDef="initialStop">
                     <th mat-header-cell *matHeaderCellDef>Initial stop</th>
-                    <td mat-cell *matCellDef="let race">{{race.companion.initialStop.name}},
-                        {{getTime(race.date.getTime()+race.companion.initialStop.delayInMillis)}}</td>
+                    <td mat-cell *matCellDef="let race">{{race.companion.initialStop.name}}, {{getTime(race.date.getTime()+race.companion.initialStop.delayInMillis)}}
+                    </td>
                 </ng-container>
                 <ng-container matColumnDef="finalStop">
                     <th mat-header-cell *matHeaderCellDef>Final stop</th>
-                    <td mat-cell *matCellDef="let race">{{race.companion.finalStop.name}},
-                        {{getTime(race.date.getTime()+race.companion.finalStop.delayInMillis)}}</td>
+                    <td mat-cell *matCellDef="let race">{{race.companion.finalStop.name}}, {{getTime(race.date.getTime()+race.companion.finalStop.delayInMillis)}}
+                    </td>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef>Status</th>
@@ -32,14 +31,12 @@
                 <ng-container matColumnDef="start">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let race">
-                        <button mat-raised-button color="primary" *ngIf="race.raceState=='VALIDATED'"
-                            (click)="startRace(race)">Start Race</button>
-                        <button mat-raised-button color="accent" *ngIf="race.raceState=='STARTED'"
-                            (click)="continueRace(race)">Continue Race</button>
+                        <button mat-raised-button color="primary" *ngIf="race.raceState=='VALIDATED'" (click)="$event.stopPropagation(); startRace(race)">Start Race</button>
+                        <button mat-raised-button color="accent" *ngIf="race.raceState=='STARTED'" (click)="$event.stopPropagation(); continueRace(race)">Continue Race</button>
                     </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" (click)="viewRace(row)"></tr>
+                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" (click)="$event.stopPropagation(); viewRace(row)"></tr>
             </mat-table>
             <div *ngIf="dataSource?.isEmpty()" class="grey">NO RACES TODAY</div>
         </div>
