--- a/Project/client/src/app/components/companion/races-companion/races-companion.component.html
+++ b/Project/client/src/app/components/companion/races-companion/races-companion.component.html
@@ -2,9 +2,6 @@
     <mat-card class="compact-card scroll">
 
         <p>Give Availability to Races</p>
-        <div class="spinner-container" *ngIf="loading">
-            <mat-spinner [diameter]="70"></mat-spinner>
-        </div>
 
         <!-- line selection -->
         <mat-form-field class="races-selection">
@@ -42,12 +39,10 @@
             <mat-datepicker #pickerTo disabled="false" [startAt]="toDateSelected"></mat-datepicker>
         </mat-form-field>
 
-        <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null"
-            (click)="search()">Search</button>
+        <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null" (click)="search()">Search</button>
 
         <div class="overflow-auto">
-            <mat-table class="center-horizontal fit-content" [dataSource]="dataSource" matSort
-                [ngClass]="{'hidden': dataSource.isEmpty()}">
+            <mat-table class="center-horizontal fit-content" [dataSource]="dataSource" matSort [ngClass]="{'hidden': dataSource.isEmpty()}">
 
                 <!-- LineName Column -->
                 <ng-container matColumnDef="LineName">
@@ -94,16 +89,14 @@
                 <ng-container matColumnDef="Availability-Action">
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell class="squeeze center-vertical" *matCellDef="let element">
-                        <button *ngIf="element.companion==null" mat-icon-button
-                            (click)="$event.stopPropagation(); giveAvailability(element)">
+                        <button *ngIf="element.companion==null" mat-icon-button (click)="$event.stopPropagation(); giveAvailability(element)">
                             <mat-icon>person_add</mat-icon>
                         </button>
                     </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}"
-                    (click)="viewRace(row)"></tr>
+                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}" (click)="viewRace(row)"></tr>
             </mat-table>
 
             <div *ngIf="dataSource.empty===true" class="grey">NO RACES FOUND</div>
